2009-12-07  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c: arrange for [tailcall] to be created with
	the other builtins: was being created in a separate call, leftover
	from pre-tip days.

2009-12-07  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclStrToD.c:  Correct conditional compile directives to
	better detect the toolchain that needs extra work for proper underflow
	treatment instead of merely detecting the mips platform. [Bug 2902010].

2009-12-07  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c:  add ::tcl::unsupported::yieldTo
	* generic/tclInt.h:    [Patch 2910056] 

2009-12-07  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclCmdMZ.c (TryPostBody): [Bug 2910044]: Close off memory
	leak in [try] when a variable-free handler clause is present.

2009-12-05  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c:   Small changes for clarity in tailcall
	* generic/tclExecute.c: and coroutine code.
	* tests/coroutine.test:
	
	* tests/tailcall.test: remove some old unused crud; improved the
	stack depth tests.	
	
	* generic/tclBasic.c:  Fixed things so that you can tailcall 
	* generic/tclNamesp.c: properly out of a coroutine.
	* tests/tailcall.test:

	* generic/tclInterp.c: Fixed tailcalls for same-interp aliases (no
	test)
	
2009-12-03  Donal K. Fellows  <dkf@users.sf.net>

	* library/safe.tcl (::safe::AliasEncoding): Make the safe encoding
	command behave more closely like the unsafe one (for safe ops).
	(::safe::AliasGlob): [Bug 2906841]: Clamp down on evil use of [glob]
	in safe interpreters.
	* tests/safe.test: Rewrite to use tcltest2 better.

2009-12-02  Jan Nijtmans  <nijtmans@users.sf.net>

	* tools/genStubs.tcl:	Add support for win32 CALLBACK functions and
	remove obsolete "emitStubs" and "genStubs" functions.
	* win/Makefile.in:	Use tcltest86.dll for all tests, and add
	.PHONY rules to preemptively stop trouble that plagued Tk from hitting
	Tcl too.

2009-11-30  Jan Nijtmans  <nijtmans@users.sf.net>
